# practice-labs

building-a-basic-ai-agent/: .env  basic_agent.py  challenge1.py  challenge2.py  pyproject.toml
data-extraction-agent-with-validated-output/: challenge1.py  challenge2.py  invoice_extractor.py  models.py  pyproject.toml
debugging-refactoring/: DEBUG_NOTES.md
dependency-lifecycle-management-and-configuration/: .env  .env.example  challenge1_health_checks.py  challenge2_graceful_shutdown.py  config.py  lifecycle_manager.py
enforcing-structured-outputs-with-pydantic-models/: models.py  pyproject.toml  retry_analyzer.py  review_analyzer.py  union_analyzer.py
enhancing-a-basic-agent-with-prompts-and-configurations/: .env  .env.example  challenge1.py  challenge2.py  enhanced_agent.py  pyproject.toml  requirements.txt
evaluation-of-agent-performance-and-cost-management/: .env  judge.py  main.py  (+1 more)
implementing-output-guardrails-and-quality-checks/: .env  .env.example  agent.py  input_guards.py  pyproject.toml
implementing-output-guardrails-and-quality-checks/solutions/: README.md  agent.py  output_guards.py  pii_detector.py
interactive-agent-with-streaming-output/: .env  .env.example  challenge1_interruptible.py  challenge2_parallel.py  interactive_loop.py  pyproject.toml  stream_utils.py  streaming_character.py  structured_streaming.py
interactive-agent-with-streaming-output/solutions/: README.md  challenge1_interruptible.py  challenge2_parallel.py  interactive_loop.py  streaming_character.py  structured_streaming.py  test_streaming.py  writer_agent.py
(+180 files in other folders)
